--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
-      <Label layoutX="16.0" layoutY="16.0" prefHeight="250.0" prefWidth="139.0" text="Back">
+      <Label layoutX="31.0" layoutY="10.0" prefHeight="44.0" prefWidth="68.0" text="Back">
          <font>
             <Font name="04b 30" size="29.0" />
          </font>
@@ -21,12 +21,12 @@
          </font>
       </Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#15de73" height="92.0" layoutX="757.0" layoutY="8.0" stroke="BLACK" strokeType="INSIDE" width="135.0" />
-      <Label layoutX="778.0" layoutY="15.0" prefHeight="438.0" prefWidth="96.0" text="Score">
+      <Label layoutX="796.0" layoutY="10.0" prefHeight="24.0" prefWidth="96.0" text="Score">
          <font>
             <Font name="04b 30" size="22.0" />
          </font>
       </Label>
-      <Label layoutX="815.0" layoutY="54.0" prefHeight="453.0" prefWidth="22.0" text="0">
+      <Label layoutX="814.0" layoutY="54.0" prefHeight="26.0" prefWidth="22.0" text="0" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="23.0" />
          </font>
