--- a/src/resources/StartMenu.fxml
+++ b/src/resources/StartMenu.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
-      <Label layoutX="99.0" layoutY="30.0" prefHeight="1217.0" prefWidth="708.0" text="Backend.Snake The Backend.Game" textAlignment="CENTER">
+      <Label layoutX="99.0" layoutY="30.0" prefHeight="1217.0" prefWidth="708.0" text="Snake The Game" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="59.0" />
          </font>
