--- a/src/resources/StartMenu.fxml
+++ b/src/resources/StartMenu.fxml
@@ -12,37 +12,32 @@
             <Font name="04b 30" size="59.0" />
          </font>
       </Label>
-      <Label layoutX="374.0" layoutY="200.0" prefHeight="1070.0" prefWidth="197.0" text="Menu" textAlignment="CENTER">
-         <font>
-            <Font name="04b 30" size="55.0" />
-         </font>
-      </Label>
-      <Label layoutX="108.0" layoutY="350.0" prefHeight="974.0" prefWidth="174.0" text="Easy" textAlignment="CENTER">
+      <Label layoutX="314.0" layoutY="176.0" prefHeight="974.0" prefWidth="260.0" text="Normal" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="50.0" />
          </font>
       </Label>
-      <Label layoutX="344.0" layoutY="350.0" prefHeight="974.0" prefWidth="243.0" text="Medium" textAlignment="CENTER">
+      <Label layoutX="213.0" layoutY="263.0" prefHeight="982.0" prefWidth="466.0" text="Food Frenzy" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="50.0" />
          </font>
       </Label>
-      <Label layoutX="640.0" layoutY="351.0" prefHeight="755.0" prefWidth="207.0" text="Hard" textAlignment="CENTER">
-         <font>
-            <Font name="04b 30" size="50.0" />
-         </font>
-      </Label>
-      <Button layoutX="107.0" layoutY="350.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="53.0" prefWidth="173.0" text="Easy">
+      <Button layoutX="311.0" layoutY="175.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="50.0" prefWidth="253.0" text="Easy">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="342.0" layoutY="352.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="50.0" prefWidth="242.0" text="Medium">
+      <Button layoutX="207.0" layoutY="263.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="58.0" prefWidth="476.0" text="Medium">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="635.0" layoutY="351.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="49.0" prefWidth="170.0" text="Hard">
+      <Label layoutX="370.0" layoutY="515.0" prefHeight="972.0" prefWidth="156.0" text="Quit" textAlignment="CENTER">
+         <font>
+            <Font name="04b 30" size="50.0" />
+         </font>
+      </Label>
+      <Button layoutX="362.0" layoutY="515.0" mnemonicParsing="false" opacity="0.0" prefHeight="56.0" prefWidth="160.0" text="Quit">
          <font>
             <Font size="18.0" />
          </font>
