--- a/src/resources/StartMenu.fxml
+++ b/src/resources/StartMenu.fxml
@@ -7,37 +7,37 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
-      <Label layoutX="218.0" layoutY="14.0" prefHeight="196.0" prefWidth="440.0" text="Snake The Game" textAlignment="CENTER">
+      <Label layoutX="99.0" layoutY="14.0" prefHeight="1147.0" prefWidth="720.0" text="Snake The Game" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="59.0" />
          </font>
       </Label>
-      <Label layoutX="355.0" layoutY="200.0" prefHeight="101.0" prefWidth="190.0" text="Normal" textAlignment="CENTER">
+      <Label layoutX="267.0" layoutY="207.0" prefHeight="965.0" prefWidth="278.0" text="Normal" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="50.0" />
          </font>
       </Label>
-      <Label layoutX="314.0" layoutY="290.0" prefHeight="120.0" prefWidth="280.0" text="Food Frenzy" textAlignment="CENTER">
+      <Label layoutX="121.0" layoutY="290.0" prefHeight="972.0" prefWidth="473.0" text="Food Frenzy" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="50.0" />
          </font>
       </Label>
-      <Button layoutX="311.0" layoutY="210.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="80.0" prefWidth="280.0" text="Easy">
+      <Button layoutX="315.0" layoutY="210.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="80.0" prefWidth="276.0" text="Easy">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="308.0" layoutY="311.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="80.0" prefWidth="286.0" text="Medium">
+      <Button layoutX="109.0" layoutY="277.0" mnemonicParsing="false" onAction="#FoodFrenzyButton" opacity="0.0" prefHeight="114.0" prefWidth="485.0" text="Medium">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label layoutX="397.0" layoutY="410.0" prefHeight="120.0" prefWidth="107.0" text="Quit" textAlignment="CENTER">
+      <Label layoutX="296.0" layoutY="410.0" prefHeight="972.0" prefWidth="208.0" text="Quit" textAlignment="CENTER">
          <font>
             <Font name="04b 30" size="50.0" />
          </font>
       </Label>
-      <Button layoutX="366.0" layoutY="425.0" mnemonicParsing="false" opacity="0.0" prefHeight="101.0" prefWidth="168.0" text="Quit">
+      <Button layoutX="280.0" layoutY="391.0" mnemonicParsing="false" onAction="#exit" opacity="0.0" prefHeight="101.0" prefWidth="179.0" text="Quit">
          <font>
             <Font size="18.0" />
          </font>
