--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -20,7 +22,7 @@
             <Font size="38.0" />
          </font>
       </Label>
-      <Label layoutX="332.0" layoutY="107.0" text="Your score: xx">
+      <Label layoutX="332.0" layoutY="107.0" text="Your score: ">
          <font>
             <Font size="41.0" />
          </font>
@@ -31,63 +33,23 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Label layoutX="349.0" layoutY="224.0" text="1." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="224.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
       <Line endX="99.729736328125" endY="-2.835968017578125" layoutX="429.0" layoutY="206.0" startX="-41.0" startY="-2.835968017578125" />
-      <Label layoutX="444.0" layoutY="224.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="224.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
       <Button layoutX="351.0" layoutY="451.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="55.0" prefWidth="228.0" />
       <Button layoutX="426.0" layoutY="518.0" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="39.0" prefWidth="75.0" />
-      <Label layoutX="444.0" layoutY="269.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="269.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="314.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="314.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="359.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="359.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="404.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="404.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="404.0" text="5." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="404.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="359.0" text="4." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="359.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="314.0" text="3." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="314.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="269.0" text="2." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="269.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
       <Label layoutX="317.0" layoutY="8.0" text="Game Over">
          <font>
             <Font size="55.0" />
          </font>
       </Label>
+      <Label fx:id="finalScore" layoutX="534.0" layoutY="113.0" text="0">
+         <font>
+            <Font size="41.0" />
+         </font>
+      </Label>
+      <ScrollPane layoutX="288.0" layoutY="223.0" prefHeight="205.0" prefWidth="339.0">
+         <content>
+            <VBox fx:id="leaderboard" prefHeight="257.0" prefWidth="455.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
