--- a/src/resources/StartMenu.fxml
+++ b/src/resources/StartMenu.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -42,5 +44,10 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <ImageView fitHeight="181.0" fitWidth="200.0" layoutX="119.0" layoutY="332.0">
+         <image>
+            <Image url="@snake-removebg-preview.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
