fixed bug with play again button

--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -12,7 +12,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2c9456" height="500.0" layoutX="199.0" layoutY="84.0" stroke="BLACK" strokeType="INSIDE" width="500.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="199.0" AnchorPane.rightAnchor="201.0" AnchorPane.topAnchor="84.0" />
-      <Label layoutX="364.0" layoutY="444.0" text="Play agian" AnchorPane.leftAnchor="364.0" AnchorPane.topAnchor="444.0">
+      <Label layoutX="364.0" layoutY="444.0" text="Play again" AnchorPane.leftAnchor="364.0" AnchorPane.topAnchor="444.0">
          <font>
             <Font size="48.0" />
          </font>
@@ -34,7 +34,7 @@
          </font>
       </Label>
       <Line endX="99.729736328125" endY="-2.835968017578125" layoutX="429.0" layoutY="206.0" startX="-41.0" startY="-2.835968017578125" />
-      <Button layoutX="351.0" layoutY="451.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="55.0" prefWidth="228.0" />
+      <Button layoutX="351.0" layoutY="451.0" mnemonicParsing="false" onAction="#playAgain" opacity="0.0" prefHeight="55.0" prefWidth="228.0" />
       <Button layoutX="426.0" layoutY="518.0" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="39.0" prefWidth="75.0" />
       <Label layoutX="317.0" layoutY="8.0" text="Game Over">
          <font>
