--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -33,5 +34,12 @@
       </Label>
       <Line endX="93.00006103515625" layoutX="780.0" layoutY="44.0" startX="-3.0" />
       <Canvas fx:id="Grid" height="600.0" layoutX="300.0" layoutY="71.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0" />
+      <Group fx:id="pause" disable="true" layoutX="318.0" layoutY="200.0" opacity="0.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
+            <Button fx:id="resume" layoutX="64.0" layoutY="75.0" mnemonicParsing="false" text="Resume" />
+            <Button layoutX="83.0" layoutY="134.0" mnemonicParsing="false" onAction="#StartMenu" text="Quit" />
+         </children>
+      </Group>
    </children>
 </AnchorPane>
