--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -1,93 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.ColorInput?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2c9456" height="500.0" layoutX="199.0" layoutY="84.0" stroke="BLACK" strokeType="INSIDE" width="500.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="199.0" AnchorPane.rightAnchor="201.0" AnchorPane.topAnchor="84.0" />
-      <Label layoutX="364.0" layoutY="444.0" text="Play agian" AnchorPane.leftAnchor="364.0" AnchorPane.topAnchor="444.0">
+      <Label layoutX="158.0" layoutY="202.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="578.0" text="Game Over">
          <font>
-            <Font size="48.0" />
+            <Font name="04b 30" size="75.0" />
+         </font>
+         <effect>
+            <ColorAdjust brightness="-1.0" contrast="-1.0" hue="-1.0" />
+         </effect>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Label>
+      <Button layoutX="365.0" layoutY="354.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
+      <Button layoutX="365.0" layoutY="417.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
+      <Label layoutX="386.0" layoutY="366.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="33.0" prefWidth="122.0" text="RETRY" textFill="RED">
+         <font>
+            <Font name="04b 30" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="429.0" layoutY="514.0" text="Quit" AnchorPane.leftAnchor="429.0">
+      <Label layoutX="405.0" layoutY="429.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="92.0" text="EXIT" textFill="RED">
          <font>
-            <Font size="38.0" />
+            <Font name="04b 30" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="332.0" layoutY="107.0" text="Your score: xx">
+      <Label layoutX="320.0" layoutY="288.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="258.0" text="score: xx" textAlignment="CENTER" textFill="#020000">
          <font>
-            <Font size="41.0" />
+            <Font name="04b 30" size="33.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1b8a47" height="275.0" layoutX="282.0" layoutY="164.0" stroke="BLACK" strokeType="INSIDE" width="350.0" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="268.0" AnchorPane.topAnchor="164.0" />
-      <Label layoutX="386.0" layoutY="173.0" text="Score board">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="224.0" text="1." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="224.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Line endX="99.729736328125" endY="-2.835968017578125" layoutX="429.0" layoutY="206.0" startX="-41.0" startY="-2.835968017578125" />
-      <Label layoutX="444.0" layoutY="224.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="224.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Button layoutX="351.0" layoutY="451.0" mnemonicParsing="false" onAction="#GameScene" opacity="0.0" prefHeight="55.0" prefWidth="228.0" />
-      <Button layoutX="426.0" layoutY="518.0" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="39.0" prefWidth="75.0" />
-      <Label layoutX="444.0" layoutY="269.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="269.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="314.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="314.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="359.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="359.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="404.0" text="xx" AnchorPane.leftAnchor="444.0" AnchorPane.topAnchor="404.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="404.0" text="5." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="404.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="359.0" text="4." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="359.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="314.0" text="3." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="314.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="349.0" layoutY="269.0" text="2." AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="269.0">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="317.0" layoutY="8.0" text="Game Over">
-         <font>
-            <Font size="55.0" />
-         </font>
-      </Label>
+      <ImageView fitHeight="181.0" fitWidth="200.0" layoutX="672.0" layoutY="51.0">
+         <image>
+            <Image url="@../../../../Downloads/snake%20pic.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
