--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.VBox?>
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
       <Label layoutX="158.0" layoutY="202.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="578.0" text="Game Over">
@@ -23,7 +25,7 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Label>
-      <Button layoutX="365.0" layoutY="354.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+      <Button layoutX="365.0" layoutY="354.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playAgain" prefHeight="53.0" prefWidth="162.0" text="retry" textFill="#000000ed">
          <font>
             <Font name="04b 30" size="13.0" />
          </font>
@@ -31,7 +33,7 @@
             <ColorInput height="52.56" paint="BLACK" width="161.56" />
          </effect>
       </Button>
-      <Button layoutX="365.0" layoutY="417.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+      <Button layoutX="365.0" layoutY="417.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#StartMenu" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
          <font>
             <Font name="04b 30" size="13.0" />
          </font>
@@ -49,7 +51,7 @@
             <Font name="04b 30" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="320.0" layoutY="288.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="258.0" text="score: xx" textAlignment="CENTER" textFill="#020000">
+      <Label layoutX="320.0" layoutY="288.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="258.0" text="score:" textAlignment="CENTER" textFill="#020000">
          <font>
             <Font name="04b 30" size="33.0" />
          </font>
@@ -59,5 +61,17 @@
             <Image url="@../../../../Downloads/snake%20pic.png" />
          </image>
       </ImageView>
+      <Label fx:id="finalScore" layoutX="484.0" layoutY="288.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="99.0" text=" xx" textAlignment="CENTER" textFill="#020000">
+         <font>
+            <Font name="04b 30" size="33.0" />
+         </font>
+      </Label>
+
+      <ScrollPane layoutX="288.0" layoutY="223.0" prefHeight="205.0" prefWidth="339.0">
+         <content>
+            <VBox fx:id="leaderboard" prefHeight="257.0" prefWidth="455.0" />
+         </content>
+      </ScrollPane>
+
    </children>
 </AnchorPane>
