--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.effect.ColorInput?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
@@ -15,7 +16,7 @@
 
       <ScrollPane layoutX="287.0" layoutY="199.0" prefHeight="205.0" prefWidth="339.0">
          <content>
-            <VBox fx:id="leaderboard" prefHeight="299.0" prefWidth="320.0" />
+            <VBox fx:id="leaderboard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="212.0" prefWidth="320.0" />
          </content>
       </ScrollPane>
       <Label layoutX="159.0" layoutY="47.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="578.0" text="Game Over">
@@ -29,32 +30,34 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Label>
-      <Button layoutX="371.0" layoutY="426.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playAgain" prefHeight="53.0" prefWidth="162.0" text="retry" textFill="#000000ed">
-         <font>
-            <Font name="04b 30" size="13.0" />
-         </font>
-         <effect>
-            <ColorInput height="52.56" paint="BLACK" width="161.56" />
-         </effect>
-      </Button>
-      <Button layoutX="371.0" layoutY="500.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#StartMenu" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
-         <font>
-            <Font name="04b 30" size="13.0" />
-         </font>
-         <effect>
-            <ColorInput height="52.56" paint="BLACK" width="161.56" />
-         </effect>
-      </Button>
-      <Label layoutX="392.0" layoutY="438.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="33.0" prefWidth="122.0" text="RETRY" textFill="RED">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="54.0" layoutX="370.0" layoutY="429.0" stroke="BLACK" strokeType="INSIDE" width="162.0" />
+      <Label layoutX="394.0" layoutY="442.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="31.0" prefWidth="118.0" text="RETRY" textFill="RED">
          <font>
             <Font name="04b 30" size="25.0" />
          </font>
       </Label>
+      <Button layoutX="371.0" layoutY="431.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playAgain" opacity="0.0" prefHeight="53.0" prefWidth="162.0" text="retry" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="54.0" layoutX="370.0" layoutY="495.0" stroke="BLACK" strokeType="INSIDE" width="162.0" />
       <Label layoutX="411.0" layoutY="512.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="92.0" text="EXIT" textFill="RED">
          <font>
             <Font name="04b 30" size="25.0" />
          </font>
       </Label>
+      <Button layoutX="371.0" layoutY="500.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
       <Label layoutX="324.0" layoutY="139.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="258.0" text="score:" textAlignment="CENTER" textFill="#020000">
          <font>
             <Font name="04b 30" size="33.0" />
