--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
@@ -41,5 +42,6 @@
             <Button layoutX="83.0" layoutY="134.0" mnemonicParsing="false" onAction="#StartMenu" text="Quit" />
          </children>
       </Group>
+      <ProgressBar fx:id="songProgressBar" layoutX="224.0" layoutY="100.0" prefWidth="200.0" progress="0.0" />
    </children>
 </AnchorPane>
