--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -3,8 +3,10 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
@@ -36,7 +38,7 @@
          </font>
       </Label>
       <Line endX="93.00006103515625" layoutX="780.0" layoutY="44.0" startX="-3.0" />
-      <Canvas fx:id="Grid" height="600.0" layoutX="300.0" layoutY="71.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0" />
+      <Canvas fx:id="Grid" accessibleRole="BUTTON" height="600.0" layoutX="300.0" layoutY="71.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0" />
       <Group fx:id="pause" disable="true" layoutX="318.0" layoutY="200.0" opacity="0.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
@@ -54,5 +56,8 @@
             <Font name="System Italic" size="13.0" />
          </font>
       </Text>
+      <CheckBox layoutX="33.0" layoutY="139.0" mnemonicParsing="false" text="Volume" />
+      <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeValue" text="Chill" />
+      <RadioButton fx:id="trap" layoutX="257.0" layoutY="79.0" mnemonicParsing="false" onAction="#changeValue" text="Trap" />
    </children>
 </AnchorPane>
