--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -57,7 +57,7 @@
          </font>
       </Text>
       <CheckBox layoutX="33.0" layoutY="139.0" mnemonicParsing="false" text="Volume" />
-      <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeValue" text="Chill" />
+      <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeValue" selected="true" text="Chill" />
       <RadioButton fx:id="trap" layoutX="257.0" layoutY="79.0" mnemonicParsing="false" onAction="#changeValue" text="Trap" />
    </children>
 </AnchorPane>
