--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -56,8 +56,8 @@
             <Font name="System Italic" size="13.0" />
          </font>
       </Text>
-      <CheckBox layoutX="33.0" layoutY="139.0" mnemonicParsing="false" text="Volume" />
-      <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeValue" selected="true" text="Chill" />
-      <RadioButton fx:id="trap" layoutX="257.0" layoutY="79.0" mnemonicParsing="false" onAction="#changeValue" text="Trap" />
+      <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeSongList" selected="true" text="Chill" />
+      <RadioButton fx:id="trap" layoutX="257.0" layoutY="79.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
+      <CheckBox fx:id="pauseCheckBox" layoutX="38.0" layoutY="136.0" mnemonicParsing="false" onAction="#pauseSong" text="Pause" />
    </children>
 </AnchorPane>
