--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.effect.SepiaTone?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
@@ -59,5 +60,6 @@
       <RadioButton fx:id="chill" layoutX="257.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeSongList" text="Chill" />
       <RadioButton fx:id="trap" layoutX="257.0" layoutY="79.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
       <CheckBox fx:id="pauseCheckBox" layoutX="38.0" layoutY="136.0" mnemonicParsing="false" onAction="#pauseSong" text="Pause" />
+      <ImageView fx:id="songPictureDisplayer" fitHeight="80.0" fitWidth="80.0" layoutX="318.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
