--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -10,6 +10,9 @@
 <?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -57,10 +60,67 @@
             <Font name="System Italic" size="9.0" />
          </font>
       </Text>
-      <RadioButton fx:id="chill" layoutX="18.0" layoutY="200.0" mnemonicParsing="false" onAction="#changeSongList" text="Chill" />
-      <RadioButton fx:id="trap" layoutX="18.0" layoutY="226.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
-      <CheckBox fx:id="pauseCheckBox" layoutX="14.0" layoutY="282.0" mnemonicParsing="false" onAction="#pauseSong" text="Pause" />
+      <RadioButton fx:id="chill" layoutX="13.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeSongList" text="Chill" />
+      <RadioButton fx:id="trap" layoutX="13.0" layoutY="271.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
+      <CheckBox fx:id="pauseCheckBox" layoutX="12.0" layoutY="357.0" mnemonicParsing="false" onAction="#pauseSong" text="Pause" />
       <ImageView fx:id="songPictureDisplayer" fitHeight="80.0" fitWidth="80.0" layoutX="32.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
-      <RadioButton fx:id="hipHop" layoutX="18.0" layoutY="254.0" mnemonicParsing="false" onAction="#changeSongList" text="HipHop" />
+      <RadioButton fx:id="hipHop" layoutX="13.0" layoutY="299.0" mnemonicParsing="false" onAction="#changeSongList" text="HipHop" />
+      <RadioButton fx:id="disco" layoutX="13.0" layoutY="327.0" mnemonicParsing="false" onAction="#changeSongList" text="Disco" />
+      <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="45.0" layoutY="230.0" startX="-44.0000114440918" strokeWidth="2.0" />
+      <Text layoutX="51.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Options" underline="true">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="40.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current list" underline="true">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="29.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Song name" />
+      <Text layoutX="29.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Song name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+         <fill>
+            <LinearGradient endX="0.6666666955658884" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.949999988079071" green="0.05700000002980232" blue="0.05700000002980232" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.25260040163993835" green="0.022923976182937622" blue="0.8842105269432068" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Text>
+      <Text layoutX="29.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. Song name" />
+      <Text layoutX="127.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="4.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&lt;">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="44.0" layoutY="386.0" startX="-44.0000114440918" strokeWidth="2.0" />
+      <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="45.0" layoutY="511.0" startX="-44.0000114440918" strokeWidth="2.0" />
+      <Text layoutX="117.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="E">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="14.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Q">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
