UI displaying song selected and the other songs contained in the current list (commit 1 / 3)

--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -77,8 +77,8 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="29.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Song name" />
-      <Text layoutX="29.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Song name">
+      <Text fx:id="song1" layoutX="29.0" layoutY="444.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Song name" />
+      <Text fx:id="song2" layoutX="29.0" layoutY="470.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Song name">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -99,7 +99,9 @@
             </LinearGradient>
          </fill>
       </Text>
-      <Text layoutX="29.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. Song name" />
+      <Text fx:id="song3" layoutX="29.0" layoutY="495.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. Song name" />
+      <Text fx:id="song4" layoutX="28.0" layoutY="519.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4. Song name" />
+      <Text fx:id="song5" layoutX="29.0" layoutY="543.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5. Song name" />
       <Text layoutX="127.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;">
          <font>
             <Font size="16.0" />
@@ -111,7 +113,7 @@
          </font>
       </Text>
       <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="44.0" layoutY="386.0" startX="-44.0000114440918" strokeWidth="2.0" />
-      <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="45.0" layoutY="511.0" startX="-44.0000114440918" strokeWidth="2.0" />
+      <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="45.0" layoutY="559.0" startX="-44.0000114440918" strokeWidth="2.0" />
       <Text layoutX="117.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="E">
          <font>
             <Font size="16.0" />
