Songlist of texts with selected song works for 'ChillList' (commit 2 / 3)

--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -77,31 +77,10 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Text>
-      <Text fx:id="song1" layoutX="29.0" layoutY="444.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Song name" />
-      <Text fx:id="song2" layoutX="29.0" layoutY="470.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Song name">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-         <fill>
-            <LinearGradient endX="0.6666666955658884" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.949999988079071" green="0.05700000002980232" blue="0.05700000002980232" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.25260040163993835" green="0.022923976182937622" blue="0.8842105269432068" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Text>
-      <Text fx:id="song3" layoutX="29.0" layoutY="495.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. Song name" />
-      <Text fx:id="song4" layoutX="28.0" layoutY="519.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4. Song name" />
-      <Text fx:id="song5" layoutX="29.0" layoutY="543.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5. Song name" />
+      <Text fx:id="song1" layoutX="29.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Song name" />
+      <Text fx:id="song2" layoutX="29.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. Song name" />
+      <Text fx:id="song3" layoutX="28.0" layoutY="519.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4. Song name" />
+      <Text fx:id="song4" layoutX="29.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5. Song name" />
       <Text layoutX="127.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;">
          <font>
             <Font size="16.0" />
@@ -123,6 +102,27 @@
          <font>
             <Font size="16.0" />
          </font>
+      </Text>
+      <Text fx:id="song0" layoutX="29.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Song name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+         <fill>
+            <LinearGradient endX="0.6666666955658884" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.949999988079071" green="0.05700000002980232" blue="0.05700000002980232" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.25260040163993835" green="0.022923976182937622" blue="0.8842105269432068" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
       </Text>
    </children>
 </AnchorPane>
