--- a/src/resources/GameOverScreen.fxml
+++ b/src/resources/GameOverScreen.fxml
@@ -36,28 +36,12 @@
             <Font name="04b 30" size="25.0" />
          </font>
       </Label>
-      <Button layoutX="371.0" layoutY="431.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playAgain" opacity="0.0" prefHeight="53.0" prefWidth="162.0" text="retry" textFill="#000000ed">
-         <font>
-            <Font name="04b 30" size="13.0" />
-         </font>
-         <effect>
-            <ColorInput height="52.56" paint="BLACK" width="161.56" />
-         </effect>
-      </Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="54.0" layoutX="370.0" layoutY="495.0" stroke="BLACK" strokeType="INSIDE" width="162.0" />
-      <Label layoutX="411.0" layoutY="512.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="92.0" text="EXIT" textFill="RED">
+      <Label layoutX="412.0" layoutY="510.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="89.0" text="QUIT" textFill="RED">
          <font>
             <Font name="04b 30" size="25.0" />
          </font>
       </Label>
-      <Button layoutX="371.0" layoutY="500.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
-         <font>
-            <Font name="04b 30" size="13.0" />
-         </font>
-         <effect>
-            <ColorInput height="52.56" paint="BLACK" width="161.56" />
-         </effect>
-      </Button>
       <Label layoutX="324.0" layoutY="139.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="258.0" text="score:" textAlignment="CENTER" textFill="#020000">
          <font>
             <Font name="04b 30" size="33.0" />
@@ -68,6 +52,22 @@
             <Font name="04b 30" size="33.0" />
          </font>
       </Label>
+      <Button layoutX="371.0" layoutY="497.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#StartMenu" opacity="0.0" prefHeight="53.0" prefWidth="162.0" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
+      <Button layoutX="371.0" layoutY="431.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playAgain" opacity="0.0" prefHeight="53.0" prefWidth="162.0" text="retry" textFill="#000000ed">
+         <font>
+            <Font name="04b 30" size="13.0" />
+         </font>
+         <effect>
+            <ColorInput height="52.56" paint="BLACK" width="161.56" />
+         </effect>
+      </Button>
 
    </children>
 </AnchorPane>
