--- a/src/resources/StartMenu.fxml
+++ b/src/resources/StartMenu.fxml
@@ -5,49 +5,53 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #4BC27E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Controller">
    <children>
-      <Label layoutX="99.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1147.0" prefWidth="720.0" text="Snake The Game" textAlignment="CENTER">
+      <Label layoutX="59.0" layoutY="95.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="787.0" text="THE SNAKE GAME" textAlignment="CENTER" textFill="#101010">
          <font>
-            <Font name="04b 30" size="59.0" />
+            <Font name="04b 30" size="60.0" />
          </font>
       </Label>
-      <Label layoutX="267.0" layoutY="207.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="965.0" prefWidth="278.0" text="Normal" textAlignment="CENTER">
-         <font>
-            <Font name="04b 30" size="50.0" />
-         </font>
-      </Label>
-      <Label layoutX="121.0" layoutY="290.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="972.0" prefWidth="473.0" text="Food Frenzy" textAlignment="CENTER">
-         <font>
-            <Font name="04b 30" size="50.0" />
-         </font>
-      </Label>
-      <Button layoutX="312.0" layoutY="167.0" mnemonicParsing="false" onAction="#NormalMode" opacity="0.42" prefHeight="80.0" prefWidth="276.0" text="Easy">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button layoutX="216.0" layoutY="277.0" mnemonicParsing="false" onAction="#FoodFrenzyButton" opacity="0.59" prefHeight="114.0" prefWidth="485.0" text="Medium">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label layoutX="296.0" layoutY="410.0" prefHeight="972.0" prefWidth="208.0" text="Quit" textAlignment="CENTER">
-         <font>
-            <Font name="04b 30" size="50.0" />
-         </font>
-      </Label>
-      <Button fx:id="resume" layoutX="389.0" layoutY="453.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exit" opacity="0.5" prefHeight="101.0" prefWidth="179.0" text="Quit">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="181.0" fitWidth="200.0" layoutX="119.0" layoutY="332.0">
+      <ImageView fitHeight="275.0" fitWidth="306.0" layoutX="421.0" layoutY="221.0">
          <image>
             <Image url="@snake-removebg-preview.png" />
          </image>
       </ImageView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="63.0" layoutX="195.0" layoutY="230.0" stroke="BLACK" strokeType="INSIDE" width="230.0" />
+      <Label layoutX="264.0" layoutY="248.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="98.0" text="EASY" textFill="RED">
+         <font>
+            <Font name="04b 30" size="24.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="63.0" layoutX="194.0" layoutY="304.0" stroke="BLACK" strokeType="INSIDE" width="230.0" />
+      <Label layoutX="240.0" layoutY="321.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="141.0" text="MEDIUM" textFill="RED">
+         <font>
+            <Font name="04b 30" size="24.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="56.0" layoutX="228.0" layoutY="413.0" stroke="BLACK" strokeType="INSIDE" width="163.0" />
+      <Label layoutX="278.0" layoutY="430.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="21.0" prefWidth="70.0" text="EXIT" textFill="RED">
+         <font>
+            <Font name="04b 30" size="20.0" />
+         </font>
+      </Label>
+      <Button layoutX="195.0" layoutY="230.0" mnemonicParsing="false" onAction="#NormalMode" opacity="0.0" prefHeight="63.0" prefWidth="229.0" text="Easy">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button layoutX="194.0" layoutY="303.0" mnemonicParsing="false" onAction="#FoodFrenzyButton" opacity="0.0" prefHeight="63.0" prefWidth="229.0" text="Medium">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="resume" layoutX="227.0" layoutY="413.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exit" opacity="0.0" prefHeight="56.0" prefWidth="164.0" text="EXIT">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
